turtleart.kerr40.Kerr40.scala.error
Erreur de compilation :
Kerr40:4: error: not found: value taille
    avance(taille)
           ^